# snaplist-ai-marketplace

./: .env.example  .gitignore  CODEX.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  main.py
docs/: architecture.md  research.md  setup.md
mobile/: README.md  capacitor.config.ts  package.json
tests/: test_api.py
web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
