[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "snaplist-ai-marketplace"
version = "0.1.0"
description = "Photo-to-listing AI gateway and marketplace connector hub"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.5,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
